feat: add class roster table

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,5 @@
 @import "@edx/brand/paragon/variables.scss";
 @import "@edx/paragon/scss/core/core.scss";
 @import "@edx/brand/paragon/overrides.scss";
+@import "react-paragon-topaz/src/variables.scss";
+@import "react-paragon-topaz/src/styles/DataTable/DataTable.scss";
