feat: lab summary header

--- a/src/components/LabSummary/index.scss
+++ b/src/components/LabSummary/index.scss
@@ -23,3 +23,7 @@
     text-decoration: underline;
     font-weight: 700; // This makes the font more similar to the mock up
 }
+
+.title-container {
+    padding-left: 20px;
+}
