--- a/src/components/ClassRoster/index.scss
+++ b/src/components/ClassRoster/index.scss
@@ -1,10 +1,6 @@
 /* index.scss */
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 
-.error-container {
-    text-align: left;
-    padding: 20px;
-}
 
 .main-header {
     display: flex;
@@ -16,6 +12,7 @@
 
 .instructor-dashboard-button {
     margin-left: auto;
+    margin-right: 10px;
 }
 
 .filterWrapper {
