--- a/src/views/LabDetails/index.scss
+++ b/src/views/LabDetails/index.scss
@@ -1,8 +1,31 @@
 /* LabDetails.scss */
 
 .spinner-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+}
+
+.row {
+  display: flex;
+  align-items: stretch;
+}
+
+.col-12.col-md-7,
+.col-12.col-md-5 {
+  display: flex;
+  flex-direction: column;
+}
+
+.lab-details-card,
+.lab-details-chard-card {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.lab-details-card .card,
+.lab-details-chard-card .card {
+  height: 100%;
+}
